# jaga-jaga

./: pyproject.toml  requirements.txt
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_title_article.py  0003_article_price_alter_article_short_description.py  0004_article_guarantee.py  0005_comment.py  0006_alter_article_options_cart.py
core/templates/core/: article_confirm_delete.html  article_form.html  cart_detail.html  detail.html  favorite_list.html  index.html  login.html  my_carts.html  registration.html
core/templatetags/: custom_tags.py
online_store/: settings.py  urls.py
templates/: base.html
templates/components/: _article.html  _navbar.html  _sidebar.html
